--- a/index.html
+++ b/index.html
@@ -3,81 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Maze Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>
-    This is the maze game </h1>
-  <p>choose carefuly </p>
-  
+  <h1>This is the Maze Game</h1>
+  <p>Choose carefully!</p>
+
+  <!-- Start -->
   <section id="start">
-    <p>
-      you stand 
-    </p>
+    <p>You stand at the entrance of the maze.</p>
     <img src="maze (1).jpg" alt="maze entrance" width="300"><br>
-    <a href="#a"> go left </a>
-    <a href="#d"> go right</a>
+    <a href="#a">Go Left</a>
+    <a href="#d">Go Right</a>
   </section>
-  <!-- go right-->
+
+  <!-- Go Right -->
   <section id="d">
-    <p>you fall</p>
-    <img src="fall.jpg" alt=""width="300"><br>
-    <a href="start"> restart</a>
-
+    <p>You fall into a pit!</p>
+    <img src="fall.jpg" alt="fall" width="300"><br>
+    <a href="#start">Restart</a>
   </section>
-  
-  <!-- go left-->
+
+  <!-- Go Left -->
   <section id="a">
-    <p> the path splits AGAIN </p>
-    <img src="tunnel.jpg" alt=""width="300"><br>
-    <a href="b"> take the narrow </a>
-    <a href="e"> take the wide </a>
+    <p>The path splits again.</p>
+    <img src="tunnel.jpg" alt="tunnel" width="300"><br>
+    <a href="#b">Take the narrow path</a>
+    <a href="#e">Take the wide path</a>
   </section>
 
-  <!-- take the wide -->
+  <!-- Take the wide path -->
   <section id="e">
-    <p>you are trapped</p>
-    <img src="dark.jpg" alt=""width="300"><br>
-    <a href="start"> restart</a>
+    <p>You are trapped!</p>
+    <img src="dark.jpg" alt="dark tunnel" width="300"><br>
+    <a href="#start">Restart</a>
   </section>
-  
-  <!-- take the narrow-->
+
+  <!-- Take the narrow path -->
   <section id="b">
-    <p> staircase </p>
-    <img src="ladder.jpg" alt=""width="300"><br>
-    <a href="c">climb</a>
-    <a href="f"> go down </a>
+    <p>You find a staircase.</p>
+    <img src="ladder.jpg" alt="ladder" width="300"><br>
+    <a href="#c">Climb</a>
+    <a href="#f">Go Down</a>
   </section>
 
-  <!-- go down -->
+  <!-- Go down -->
   <section id="c">
-    <p>blocked</p>
-    <img src="gate.jpg" alt=""width="300"><br>
-    <a href="start"> restart</a>
+    <p>Blocked by a gate!</p>
+    <img src="gate.jpg" alt="gate" width="300"><br>
+    <a href="#start">Restart</a>
   </section>
 
-  <!-- climb -->
+  <!-- Climb -->
   <section id="f">
-    <p>you reached a door</p>
-    <img src="key.jpg" alt=""width="300"><br>
-    <a href="g">silver </a>
-    <a href="h" > gold</a>
-    
+    <p>You reach a mysterious door.</p>
+    <img src="key.jpg" alt="keys" width="300"><br>
+    <a href="#g">Silver Key</a>
+    <a href="#h">Gold Key</a>
   </section>
 
-  <!-- silver -->
+  <!-- Silver -->
   <section id="g">
-    <p> game over </p>
-    <img src="darts.jpg" alt=""width="300"><br>
-    <a href="start"> restart</a>
+    <p>Game Over — poison darts!</p>
+    <img src="darts.jpg" alt="darts" width="300"><br>
+    <a href="#start">Restart</a>
   </section>
 
-  <!-- gold-->
+  <!-- Gold -->
   <section id="h">
-    <p>you win</p>
-    <img src="treasure.jpg" alt=""width="300"><br>
-    <a href="start "> play again</a>
+    <p>You win! Treasure found!</p>
+    <img src="treasure.jpg" alt="treasure" width="300"><br>
+    <a href="#start">Play Again</a>
   </section>
+
+  <script>
+  if (!location.hash) location.hash = "#start";
+</script>
+
+
   
 </body>
 </html>
